--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 	<title>Karen's Website</title>
+	<link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-
+<h1>Welcome to Karen's Website!</h1>
 </body>
 </html>
